# lidar_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml  test
bags/: test.bag
before/src/: calculate.py  connect.py  debug.py  example.py  graphics.py  mapdata.py  newICP.py  rplidar.py  scanCheck.py  scanLog.py  scandata.py  unit.py
catkin_ws/devel/: .catkin
headerFiles/ros/: ros.h
headerFiles/sensor_msgs/: LaserScan.h
headerFiles/std_srvs/: Empty.h
launch/: hector_lidar.launch  hector_only.launch  hectormapping.launch  restore_from_csv2_launch.py  slam_toolbox_launch.py  view_launch.py  view_rplidar_a3_with_rosbag.launch
log/: log_2024-01-23-15-25-53.txt  log_2024-01-23-15-25-58.txt
log/test1/: log_2024-01-23-15-25-55.txt
log/test2/: log_2024-02-08-16-58-40.txt  log_2024-02-08-16-58-44.txt
log2/: log_2024-02-08-16-58-32.txt  log_2024-02-08-16-58-34.txt  log_2024-02-08-16-58-36.txt  log_2024-02-08-16-58-38.txt  log_2024-02-08-16-58-39.txt  log_2024-02-08-16-58-41.txt  log_2024-02-08-16-58-46.txt  log_2024-02-08-16-58-51.txt  log_2024-02-08-16-58-53.txt  log_2024-02-08-16-58-54.txt  log_2024-02-08-16-58-55.txt  log_2024-02-08-16-58-57.txt
rviz/: slam.rviz
src/: Todo  calculate.py  compare.py  connect.py  cord.py  debug.py  gui.py  icp.py  lidarScan.py  main.py  mapdata.py  newICP.py  scanCheck.py  scanFile.py  scanLog.py  scandata.py  test.py  unit.py
src/bag/: bag2csv.py  csv2bag.py
src/bag_ros1/: bag_DBSCAN.py  bag_modify.py  csv2bag.py  main.py  node_DBSCAN.py  node_tf.py  preprocess.py  readBag.py  save_images.py  train.py  train2.py
src/bag_ros2/: train.py
src/gui/: gui.py  main.py  scanFile.py
src/lidar/: lidarScan.py  rplidar.py  subscriber.py
src/log/: log_2024-01-23-15-25-49.txt  log_2024-01-23-15-25-50.txt  log_2024-01-23-15-25-51.txt  log_2024-01-23-15-25-52.txt  log_2024-01-23-15-25-54.txt  log_2024-01-23-15-25-56.txt  log_2024-01-23-15-25-57.txt  log_2024-01-23-15-25-59.txt
src/log2/: log_2024-02-08-16-58-25.txt  log_2024-02-08-16-58-26.txt  log_2024-02-08-16-58-27.txt  log_2024-02-08-16-58-28.txt  log_2024-02-08-16-58-29.txt  log_2024-02-08-16-58-30.txt  log_2024-02-08-16-58-31.txt  log_2024-02-08-16-58-33.txt  log_2024-02-08-16-58-35.txt  log_2024-02-08-16-58-37.txt  log_2024-02-08-16-58-42.txt  log_2024-02-08-16-58-43.txt  log_2024-02-08-16-58-45.txt  log_2024-02-08-16-58-47.txt  log_2024-02-08-16-58-48.txt  log_2024-02-08-16-58-49.txt  log_2024-02-08-16-58-50.txt  log_2024-02-08-16-58-52.txt  log_2024-02-08-16-58-56.txt  log_2024-02-08-16-58-58.txt
src/map/: compareMap.py  (+1 more)
trash/: slam_toolbox_launch.py  view_launch.py
(+52 files in other folders)
