<?xml version="1.0"?>
<package format="3">
  <name>lidar_slam</name>
  <version>0.0.0</version>
  <description>lidar slam project</description>
  <maintainer email="doodle@dgu.ac.kr">KimDoodle</maintainer>
  <license>Apache License 2.0</license>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

</package>
