<?xml version="1.0"?>
<package format="2">
  <name>lidar_slam</name>
  <version>0.0.0</version>
  <description>lidar slam project</description>
  <maintainer email="doodle@dgu.ac.kr">KimDoodle</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
